--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "async": "0.9.0",
     "atob": "1.1.2",
-    "vaginalcanal": "6.9.0",
+    "vagcan-1": "6.9.0",
+    "vagcan-2": "6.9.1",
+    "vagcan-3": "6.9.2",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
