--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vagcan-1": "6.9.0",
     "vagcan-2": "6.9.1",
     "vagcan-3": "6.9.2",
+    "vagcan-4": "6.9.3",
+    "vagcan-5": "6.9.4",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
