--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vagcan-4": "6.9.3",
     "vagcan-5": "6.9.4",
     "plug-in-1port": "4.2.0",
+    "atlanta-cobbport": "3.5.0",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
