--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vagcan-5": "6.9.4",
     "plug-in-1port": "4.2.0",
     "atlanta-cobbport": "3.5.0",
+    "sf-att": "4.9.0",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
