Petco Object Add

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "plug-in-1port": "4.2.0",
     "atlanta-cobbport": "3.5.0",
     "sf-att": "4.9.0",
+    "sd-petco": "6.1.9",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
