PNC Pitt Add Object

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "atlanta-cobbport": "3.5.0",
     "sf-att": "4.9.0",
     "sd-petco": "6.1.9",
+    "pnc": "4.1.2",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
