--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "colisuem": "5.1.0",
     "safeco" : "2.0.6",
     "dodger" : "3.1.0",
+    "angel" : "7.1.4",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
