--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "vagcan-4": "6.9.3",
     "vagcan-5": "6.9.4",
     "plug-in-1port": "4.2.0",
-    "atlanta-cobbport": "3.5.0",
+    "atl-suntrust": "6.7.8",
     "sf-att": "4.9.0",
     "sd-petco": "6.1.9",
     "colisuem": "5.1.0",
     "safeco" : "2.0.6",
     "dodger" : "3.1.0",
     "angel" : "7.1.4",
+    "chase" : "4.8.0",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
