--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "atl-suntrust": "6.7.8",
     "sf-att": "4.9.0",
     "sd-petco": "6.1.9",
-    "colisuem": "5.1.0",
-    "safeco" : "2.0.6",
-    "dodger" : "3.1.0",
-    "angel" : "7.1.4",
-    "chase" : "4.8.0",
+    "oak-colisuem": "5.1.0",
+    "sea-safeco" : "2.0.6",
+    "la-dodger" : "3.1.0",
+    "ana-angel" : "7.1.4",
+    "ari-chase" : "4.8.0",
+    "col-coors" : "3.0.3",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
