--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ana-angel" : "7.1.4",
     "ari-chase" : "4.8.0",
     "col-coors" : "3.0.3",
+    "tex-globe life" : "6.8.2",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
