Minute Object Add

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ari-chase" : "4.8.0",
     "col-coors" : "3.0.3",
     "tex-globe life" : "6.8.2",
+    "hou-minute maid" : "2.8.1",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
