Royal Notation Object Add

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "col-coors" : "3.0.3",
     "tex-globe life" : "6.8.2",
     "hou-minute maid" : "2.8.1",
+    "kc-kauffman" : "8.1.6",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
