--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tex-globe life" : "6.8.2",
     "hou-minute maid" : "2.8.1",
     "kc-kauffman" : "8.1.6",
+    "minn-target" : "6.1.2",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
