S CHI Guranteed Object Notation Add - Pickup Before North Mil

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "hou-minute maid" : "2.8.1",
     "kc-kauffman" : "8.1.6",
     "minn-target" : "6.1.2",
-    "chi-wrigley" : "7.7.3",
+    "nchi-wrigley" : "7.7.3",
+    "schi-guranteedrate" : "3.1.2",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
