--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "minn-target" : "6.1.2",
     "nchi-wrigley" : "7.7.3",
     "schi-guranteedrate" : "3.1.2",
+    "mil-miller" : "4.1.4",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
