--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "stl-busch" : "3.1.4",
     "cinn-great american" : "5.1.3",
     "cle-progressive" : "2.1.6",
+    "det-comerica" : "3.1.3",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
