--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cinn-great american" : "5.1.3",
     "cle-progressive" : "2.1.6",
     "det-comerica" : "3.1.3",
+    "tor-rogers" : "4.1.6",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
