--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cle-progressive" : "2.1.6",
     "det-comerica" : "3.1.3",
     "tor-rogers" : "4.1.6",
+    "pit-pnc" : "4.1.2",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
