--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "det-comerica" : "3.1.3",
     "tor-rogers" : "4.1.6",
     "pit-pnc" : "4.1.2",
+    "tam-tropicana" : "7.2.7",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
