--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "tor-rogers" : "4.1.6",
     "pit-pnc" : "4.1.2",
     "tam-tropicana" : "7.2.7",
+    "mia-marlins" : "3.0.5",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
