--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "pit-pnc" : "4.1.2",
     "tam-tropicana" : "7.2.7",
     "mia-marlins" : "3.0.5",
+    "wash-nationals" : "2.0.2",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
