--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "tam-tropicana" : "7.2.7",
     "mia-marlins" : "3.0.5",
     "wash-nationals" : "2.0.2",
+    "balt-oriole-camden" : "4.1.0",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
