--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mia-marlins" : "3.0.5",
     "wash-nationals" : "2.0.2",
     "balt-oriole-camden" : "4.1.0",
+    "phil-citizens" : "2.1.5",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
