Big Apple Northside Push - Object Notation Added

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "balt-oriole-camden" : "4.1.0",
     "phil-citizens" : "2.1.5",
     "nym-citi" : "7.1.8",
+    "nyy-yankee" : "7.1.8",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
