--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "phil-citizens" : "2.1.5",
     "nym-citi" : "7.1.8",
     "nyy-yankee" : "7.1.8",
+    "bos-fenway" : "8.7.7",
     "autoprefixer": "6.3.5",
     "autosize": "3.0.15",
     "babel-core": "6.9.1",
